Add placeholder for submission link

--- a/zimap/index.html
+++ b/zimap/index.html
@@ -46,6 +46,9 @@
             <a class="centertext" href="#">
                 <h3>Zimap SDK Toolkit</h3>
             </a>
+            <a class="centertext" href="#">
+                <h3>Map submission form</h3>
+            </a>
         </div>
 
     </div>
