--- a/zimap/index.html
+++ b/zimap/index.html
@@ -19,8 +19,8 @@
             <p>Custom maps will appear in all default map selection menus.</p>
             <p>Quickstart guide:</p>
             <ol>
-                <li>Install <a href="#">BepInEx Mod Loader</a></li>
-                <li>Install the <a href="#">Map Loader plugin</a></li>
+                <li>Install <a href="https://github.com/BepInEx/BepInEx/releases">BepInEx Mod Loader</a></li>
+                <li>Install the <a href="downloads/Zi9sMapLoader.zip">Map Loader plugin</a></li>
                 <li>Install some maps</li>
                 <li>Enjoy the custom map experience</li>
             </ol>
@@ -36,22 +36,22 @@
         </div>
         <div class="card card-blue">
             <h1 class="centertitle">For Mappers</h1>
-            <p>This section is for people who want to make or port a map to the Map Loader.</p>
+            <p>This section is for people who want to make or port a map to CarX utilizing Zi9's Map Loader.</p>
             <a class="centertext" href="docs/zimap-doc.html">
                 <h3>Documentation</h3>
             </a>
             <a class="centertext" href="docs/zimap-stepbystep.html">
                 <h3>Step by step guide</h3>
             </a>
-            <a class="centertext" href="#">
+            <a class="centertext" href="downloads/ZimapSDK.zip">
                 <h3>Zimap SDK Toolkit</h3>
             </a>
-            <a class="centertext" href="#">
+            <a class="centertext" href="https://forms.gle/atYp36NAq5SWQAQH7">
                 <h3>Map submission form</h3>
             </a>
         </div>
-
     </div>
+    <p class="centertext">This is all still in the testing phase, report all bugs to me and suggest improvements/changes on Discord Zi9#3641</p>
 </body>
 
 </html>
