--- a/misc-projects/gouch/index.html
+++ b/misc-projects/gouch/index.html
@@ -2,24 +2,25 @@
 <html lang="">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>p5.js example</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-      background-color: black;
-    }
-  </style>
-  <script src="../p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="sketch.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gouch</title>
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            background-color: black;
+        }
+    </style>
+    <script src="../p5.min.js"></script>
+    <script src="../p5.min.sound.js"></script>
+    <script src="sketch.js"></script>
 </head>
 
 <body>
-  <main>
-  </main>
+    <h1 style="color:white;text-align: center;font-family: Arial;">Gouch</h1>
+    <main>
+    </main>
 </body>
 
 </html>
