--- a/misc-projects/gouch/index.html
+++ b/misc-projects/gouch/index.html
@@ -12,8 +12,8 @@
             background-color: black;
         }
     </style>
-    <script src="../p5.min.js"></script>
-    <script src="../p5.min.sound.js"></script>
+    <script src="p5.min.js"></script>
+    <script src="p5.min.sound.js"></script>
     <script src="sketch.js"></script>
 </head>
 
