--- a/misc-projects/gouch/index.html
+++ b/misc-projects/gouch/index.html
@@ -12,9 +12,9 @@
             background-color: black;
         }
     </style>
-    <script src="p5.min.js"></script>
-    <script src="p5.min.sound.js"></script>
-    <script src="sketch.js"></script>
+    <script src="https://zi9.github.io/misc-projects/gouch/p5.min.js"></script>
+    <script src="https://zi9.github.io/misc-projects/gouch/p5.min.sound.js"></script>
+    <script src="https://zi9.github.io/misc-projects/gouch/sketch.js"></script>
 </head>
 
 <body>
