--- a/misc-projects/gouch/index.html
+++ b/misc-projects/gouch/index.html
@@ -13,7 +13,7 @@
         }
     </style>
     <script src="https://zi9.github.io/misc-projects/gouch/p5.min.js"></script>
-    <script src="https://zi9.github.io/misc-projects/gouch/p5.min.sound.js"></script>
+    <script src="https://zi9.github.io/misc-projects/gouch/p5.sound.min.js"></script>
     <script src="https://zi9.github.io/misc-projects/gouch/sketch.js"></script>
 </head>
 
