--- a/zimap/maps/index.html
+++ b/zimap/maps/index.html
@@ -12,15 +12,15 @@
 <body>
     <p class="underconstruction">THIS PAGE IS UNDER CONSTRUCTION</p>
     <h2 class="pagetitle">Maps for Zi9's Map Loader</h2>
-    <p class="updatetime">Last updated on 2021/08/11 20:29:53
+    <p class="updatetime">Last updated on 2021/08/22 23:56:22
     <div class="maps">
 
         <div class="card map-card">
             <div class="map-textblock">
                 <div class="map-titlebox">
-                    <h2 class="map-title" id="1234567">Placeholder Map 1</h2>
+                    <h2 class="map-title" id="8808175">Garage</h2>
                     <div class="map-download">
-                        <a class="map-download-content" href="http://example.org">
+                        <a class="map-download-content" href="https://drive.google.com/file/d/1y4JMsOqmYkt-zSbWc4QO9dlN_TtmbJWs/view?usp=sharing">
                             <h1 class="map-download-icon">⇓</h1>
                             <p class="map-download-text">Download</p>
                         </a>
@@ -28,14 +28,14 @@
                 </div>
                 <hr>
                 <div class="map-description">
-                    <p><b>Author : </b>Placeholder Author Name</p>
-                    <p><b>Size : </b>10MB</p>
-                    <p><b>MapID : </b>1234567</p>
-                    <p>This is an example description</p>
+                    <p><b>Author : </b>Drubilka</p>
+                    <p><b>Size : </b>27MB</p>
+                    <p><b>MapID : </b>8808175</p>
+                    <p>Small garage map with nice lighting setup for screenshots</p>
                 </div>
             </div>
             <div class="map-coverblock">
-                <img class="map-cover" src="map-covers/1234567.png">
+                <img class="map-cover" src="map-covers/8808175.png">
             </div>
         </div>
     </div>
