--- a/old-carx-stuff/index.html
+++ b/old-carx-stuff/index.html
@@ -12,6 +12,7 @@
         <div class="content">
             <h1>Zi9's Software Creations</h1>
             <h2>CarX Drift Racing Online mods</h2>
+            <h2>These mods no longer work</h2>
 
             <div id="error" class="error-container"><span class="error"></span></div>
             <div id="dynamic-content"></div>
