--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: black;
+        }
+        h2 {
+            text-align: center;
+            margin: 0px auto;
+            display: block;
+            color: white;
         }
     </style>
 </head>
 
 <body>
-    <h2>Nothing too cool here atm ;)</h2>
-    <p>Contact me on Discord at Zi9#3641</p>
-    <a href="old-carx-stuff/#home">Old CarX Mods Page</a>
-    <br>
-    <a href="zimap/">Map Loader Page</a>
+    <h2>Soon</h2>
 </body>
 
 </html>
