--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
         <p class="centertext graytext">Zi9#3641 on Discord</p>
         <p class="centertext graytext">Zi9's Software 2022 All rights reserved</p>
     </main>
+
+
+    <main>
+        <h1>FAQ</h1>
+        <p class="bolder">Q: How is ZML different from BepInEx?</p>
+        <p>A: ZML has the same functionality of injecting new behavior into the game, however ZML uses a verification process to guarantee the safety of players from any sort of cheats or hacks. Mod developers need to get their mods approved before they
+            are globally enabled. If a mod developer decides to go rogue and give out an update with some sort of a cheat in it, they will get their developer license revoked and their mods will get globally disabled.</p>
+        <hr>
+        <p class="bolder">Q: What are approved mods?</p>
+        <p>A: Approved mods are mods that have been reviewed by the ZML team and verified to not be unsafe or stolen ideas.</p>
+        <hr>
+        <p class="bolder">Q: How does a mod get approved??</p>
+        <p>A: The ZML team will request a full description of the mod's features and a private playtest session will determine the validity of the mod. This is mostly just to verify that there is no hidden cheats or hacks built into the mod. If your mod
+            gets rejected you will get a detailed report on why it has failed the approval process.</p>
+    </main>
 </body>
 
 </html>
