--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="bolder">Q: What are approved mods?</p>
         <p>A: Approved mods are mods that have been reviewed by the ZML team and verified to not be unsafe or stolen ideas.</p>
         <hr>
-        <p class="bolder">Q: How does a mod get approved??</p>
+        <p class="bolder">Q: How does a mod get approved?</p>
         <p>A: The ZML team will request a full description of the mod's features and a private playtest session will determine the validity of the mod. This is mostly just to verify that there is no hidden cheats or hacks built into the mod. If your mod
             gets rejected you will get a detailed report on why it has failed the approval process.</p>
     </main>
