--- a/index.html
+++ b/index.html
@@ -1,77 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <title>Welcome to ZML</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="ZML by Zi9" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="icon" href="favicon.ico">
+    <meta http-equiv="refresh" content="0; url='https://zi9.github.io/zml/'" />
 </head>
 
 <body>
-    <main>
-        <h1>Welcome to ZML</h1>
-        <p class="centertext">ZML (Zi9's Mod Loader) is a new modification loader for CarX Drift Racing Online. </p>
-        <p class="centertext">It is built as a new, more secure platform for modding the game.</p>
-        <hr>
-        <h3>Features</h3>
-        <ul>
-            <li>
-                <p class="prefix-emoji">🔒</p> Mod encryption
-            </li>
-            <li>
-                <p class="prefix-emoji">🔑</p> Private mod support (SteamID based locking)
-            </li>
-            <li>
-                <p class="prefix-emoji">🖇️</p> BepInEx mod support (only approved mods)
-            </li>
-            <li>
-                <p class="prefix-emoji">🖼️</p> A central UI for mods to use (ZML Manager Toolbox)
-            </li>
-            <li>
-                <p class="prefix-emoji">⌨️</p> A keybind API for mods to easily define re-bindable keys
-            </li>
-            <li>
-                <p class="prefix-emoji">⚙️</p> A config API for mods to easily set and get settings
-            </li>
-            <li>
-                <p class="prefix-emoji">🛠️</p> Built-in developer tools
-            </li>
-        </ul>
-        <p>And many more cool things to come, such as</p>
-        <ul>
-            <li>
-                <p class="prefix-emoji">⚔️</p> Built-in anti-cheat
-            </li>
-            <li>
-                <p class="prefix-emoji">🔄</p> Automatic updating
-            </li>
-            <li>
-                <p class="prefix-emoji">🔧</p> Many more APIs to ease the process of making mods
-            </li>
-        </ul>
-        <h3 class="centertext" style="margin: 2rem;">Coming soon</h3>
-        <hr>
-        <p class="centertext graytext">Zi9#3641 on Discord</p>
-        <p class="centertext graytext">Zi9's Software 2022 All rights reserved</p>
-    </main>
-
-
-    <main>
-        <h1>FAQ</h1>
-        <p class="bolder">Q: How is ZML different from BepInEx?</p>
-        <p>A: ZML has the same functionality of injecting new behavior into the game, however ZML uses a verification process to guarantee the safety of players from any sort of cheats or hacks. Mod developers need to get their mods approved before they
-            are globally enabled. If a mod developer decides to go rogue and give out an update with some sort of a cheat in it, they will get their developer license revoked and their mods will get globally disabled.</p>
-        <hr>
-        <p class="bolder">Q: What are approved mods?</p>
-        <p>A: Approved mods are mods that have been reviewed by the ZML team and verified to not be unsafe or stolen ideas.</p>
-        <hr>
-        <p class="bolder">Q: How does a mod get approved?</p>
-        <p>A: The ZML team will request a full description of the mod's features and a private playtest session will determine the validity of the mod. This is mostly just to verify that there is no hidden cheats or hacks built into the mod. If your mod
-            gets rejected you will get a detailed report on why it has failed the approval process.</p>
-    </main>
+    <p>Please follow <a href="https://zi9.github.io/zml/">this link</a>.</p>
 </body>
 
 </html>
