Change redir text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>Please follow <a href="https://zi9.github.io/zml/">this link</a>.</p>
+    <p>Redirecting to <a href="https://zi9.github.io/zml/">https://zi9.github.io/zml/...</a>.</p>
 </body>
 
 </html>
