Make font less ugly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <meta http-equiv="refresh" content="0; url='https://zi9.github.io/zml/'" />
+    <style>
+        html {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+    </style>
 </head>
 
 <body>
