--- a/zml/versions/DEV/index.html
+++ b/zml/versions/DEV/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="Development Builds of ZML" />
-    <link rel="stylesheet" type="text/css" href="../../style.css" />
+    <link rel="stylesheet" type="text/css" href="/zml/style.css" />
     <link rel="icon" href="/favicon.ico">
 </head>
 
