--- a/zml/versions/DEV/index.html
+++ b/zml/versions/DEV/index.html
@@ -18,6 +18,9 @@
         <h3>Versions</h3>
         <ul>
             <li>
+                <p class="prefix-emoji">🏷️</p><a href="ZML-v1.2.0-RC2.zip">1.2.0-RC2 (Release Candidate 2)</a>
+            </li>
+            <li>
                 <p class="prefix-emoji">🏷️</p><a href="ZML-v1.2.0-RC1.zip">1.2.0-RC1 (Release Candidate 1)</a>
             </li>
         </ul>
