--- a/zml/index.html
+++ b/zml/index.html
@@ -52,7 +52,9 @@
                 <p class="prefix-emoji">🔧</p> Many more APIs to ease the process of making mods
             </li>
         </ul>
-        <h3 class="centertext" style="margin: 2rem;">Coming soon</h3>
+        <a href="/zml/versions/LIVE/ZML-v1.2.0.zip">
+            <h3 class="centertext" style="margin: 2rem;">Download ZML 1.2.0</h3>
+        </a>
         <hr>
         <p class="centertext graytext">Zi9#3641 on Discord</p>
         <p class="centertext graytext">Zi9's Software 2022 All rights reserved</p>
