Add discord link

--- a/zml/index.html
+++ b/zml/index.html
@@ -55,6 +55,10 @@
         <a href="/zml/versions/LIVE/ZML-v1.2.1.zip">
             <h3 class="centertext" style="margin: 2rem;">Download ZML 1.2.1</h3>
         </a>
+        <a href="https://discord.gg/DpR9xWzPyb">
+            <h3 class="centertext" style="margin: 2rem;">Join the ZML Official Discord</h3>
+        </a>
+
         <hr>
         <p class="centertext graytext">Zi9#3641 on Discord</p>
         <p class="centertext graytext">Zi9's Software 2022 All rights reserved</p>
