--- a/zml/versions/DEV/index.html
+++ b/zml/versions/DEV/index.html
@@ -18,10 +18,19 @@
         <h3>Versions</h3>
         <ul>
             <li>
-                <p class="prefix-emoji">✔️</p><a href="ZML-v1.2.0-RC2.zip">[LATEST] 1.2.0-RC2 (Release Candidate 2)</a>
+                <p class="prefix-emoji">‼️</p>
+                <a>No Current Development version</a>
             </li>
             <li>
-                <p class="prefix-emoji">🏷️</p><a href="ZML-v1.2.0-RC1.zip">1.2.0-RC1 (Release Candidate 1)</a>
+                <h5>Old Versions</h5>
+            </li>
+            <li>
+                <p class="prefix-emoji">⭕</p>
+                <a>1.2.0-RC2 (Release Candidate 2)</a>
+            </li>
+            <li>
+                <p class="prefix-emoji">⭕</p>
+                <a>1.2.0-RC1 (Release Candidate 1)</a>
             </li>
         </ul>
 </body>
