--- a/zml/index.html
+++ b/zml/index.html
@@ -52,12 +52,16 @@
                 <p class="prefix-emoji">🔧</p> Many more APIs to ease the process of making mods
             </li>
         </ul>
-        <a href="/zml/versions/LIVE/ZML-v1.2.1.zip">
-            <h3 class="centertext" style="margin: 2rem;">Download ZML 1.2.1</h3>
+        <a href="/zml/versions/LIVE/ZML-v1.3.0.zip">
+            <h3 class="centertext" style="margin: 2rem;">🔷 Download ZML 1.3.0 🔷</h3>
         </a>
         <a href="https://discord.gg/DpR9xWzPyb">
             <h3 class="centertext" style="margin: 2rem;">Join the ZML Official Discord</h3>
         </a>
+
+        <div class="centerdiv">
+            <iframe src="https://discord.com/widget?id=935587204170915890&theme=dark" width="350" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        </div>
 
         <hr>
         <p class="centertext graytext">Zi9#3641 on Discord</p>
