Remove version number

--- a/zml/index.html
+++ b/zml/index.html
@@ -52,8 +52,8 @@
                 <p class="prefix-emoji">🔧</p> Many more APIs to ease the process of making mods
             </li>
         </ul>
-        <a href="/zml/versions/LIVE/ZML-v1.3.0.zip">
-            <h3 class="centertext" style="margin: 2rem;">🔷 Download ZML 1.3.0 🔷</h3>
+        <a href="/zml/versions/LIVE/ZML.zip">
+            <h3 class="centertext" style="margin: 2rem;">🔷 Download ZML 🔷</h3>
         </a>
         <a href="https://discord.gg/DpR9xWzPyb">
             <h3 class="centertext" style="margin: 2rem;">Join the ZML Official Discord</h3>
