--- a/zml/index.html
+++ b/zml/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <h1>Welcome to ZML</h1>
-        <p class="centertext">ZML (Zi9's Mod Loader) is a new modification loader for CarX Drift Racing Online. </p>
+        <p class="centertext">ZML is a new modification loader for CarX Drift Racing Online. </p>
         <p class="centertext">It is built as a new, more secure platform for modding the game.</p>
         <hr>
         <h3>Features</h3>
@@ -37,19 +37,13 @@
                 <p class="prefix-emoji">⚙️</p> A config API for mods to easily set and get settings
             </li>
             <li>
-                <p class="prefix-emoji">🛠️</p> Built-in developer tools
-            </li>
-        </ul>
-        <p>And many more cool things to come, such as</p>
-        <ul>
-            <li>
-                <p class="prefix-emoji">⚔️</p> Built-in anti-cheat
+                <p class="prefix-emoji">⚔️</p> Built-in anti-cheat & anti-grief
             </li>
             <li>
                 <p class="prefix-emoji">🔄</p> Automatic updating
             </li>
             <li>
-                <p class="prefix-emoji">🔧</p> Many more APIs to ease the process of making mods
+                <p class="prefix-emoji">➕</p> ... and much more
             </li>
         </ul>
         <a href="/zml/versions/LIVE/ZML.zip">
@@ -65,7 +59,7 @@
 
         <hr>
         <p class="centertext graytext">Zi9#3641 on Discord</p>
-        <p class="centertext graytext">Zi9's Software 2022 All rights reserved</p>
+        <p class="centertext graytext">Zi9's Software & Team ZML 2022 All rights reserved</p>
     </main>
 
 
