--- a/bri-ish/index.html
+++ b/bri-ish/index.html
@@ -9,7 +9,7 @@
     <main>
         <p>English goes in...</p>
         <input id="in" />
-        <img src="http://www.clipartbest.com/cliparts/nTX/L8g/nTXL8g7Xc.png" />
+        <img src="arrow.png" />
         <p>Bri'ish comes out</p>
         <input id="out" />
     </main>
