--- a/zml/index.html
+++ b/zml/index.html
@@ -12,9 +12,13 @@
 
 <body>
     <main>
-        <h1>Welcome to ZML</h1>
+        <div class="centertext title">
+            <p class="titleWelcome">Welcome to</p>
+            <p class="titleZML">ZML</p>
+        </div>
         <p class="centertext">ZML is a new modification loader for CarX Drift Racing Online. </p>
         <p class="centertext">It is built as a new, more secure platform for modding the game.</p>
+        <br>
         <hr>
         <h3>Features</h3>
         <ul>
@@ -47,13 +51,13 @@
             </li>
         </ul>
         <a href="/zml/versions/LIVE/ZML.zip">
-            <h3 class="centertext" style="margin: 2rem;">🔷 Download ZML 🔷</h3>
+            <h3 class="centertext">🔷 Download ZML 🔷</h3>
         </a>
         <a href="https://discord.gg/DpR9xWzPyb">
-            <h3 class="centertext" style="margin: 2rem;">Join the ZML Official Discord</h3>
+            <h3 class="centertext">Join the ZML Official Discord</h3>
         </a>
 
-        <div class="centerdiv">
+        <div class="discord">
             <iframe src="https://discord.com/widget?id=935587204170915890&theme=dark" width="350" height="400" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
 
