--- a/zml/index.html
+++ b/zml/index.html
@@ -54,7 +54,10 @@
             <h3 class="centertext">🔷 Download ZML 🔷</h3>
         </a>
         <a href="https://discord.gg/DpR9xWzPyb">
-            <h3 class="centertext">Join the ZML Official Discord</h3>
+            <h3 class="centertext">🗣️ Join the ZML Official Discord 🗣️</h3>
+        </a>
+        <a href="https://ko-fi.com/zi9xd/posts">
+            <h3 class="centertext">☕ See development progress at Ko-fi ☕</h3>
         </a>
 
         <div class="discord">
