New style for STH

--- a/zml/tools/suspensiontuner/index.html
+++ b/zml/tools/suspensiontuner/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Suspension Tuning Helper</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap">
+    <title>[STH] Suspension Tuning Helper</title>
 </head>
 
 <body>
-    <h1>Suspension Tuning Helper</h1>
+    <div class="img-logo">
+        <img src="img/STH_LOGO.png" alt="Logo">
+    </div>
     <h3>Created by Dranser, adapted for web by Zi9</h3>
     <div class="mainapp">
         <div class="inputbox">
@@ -61,9 +63,9 @@
             <p>Rear Damper Rebound: </p>
             <p id="rearDamperReboundLabel">NULL</p>
         </div>
-        <a href="https://docs.google.com/spreadsheets/d/1738OHHb1ThNapS9rEqyZ-w8kKsow_1aSJNvvi8EwkAo/edit?usp=sharing">Click here to see<br>Aerodynamic Properties</a>
+        <a href="https://docs.google.com/spreadsheets/d/1738OHHb1ThNapS9rEqyZ-w8kKsow_1aSJNvvi8EwkAo/edit?usp=sharing">Aerodynamic Properties</a>
     </div>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
