--- a/zml/tools/suspensiontuner/index.html
+++ b/zml/tools/suspensiontuner/index.html
@@ -24,6 +24,14 @@
         </div>
         <div class="CalculationForm">
             <div class="variable">
+                <label for="frontsSpringsStiffness">Front Spring Stiffness:</label>
+                <span id="frontSpringsStiffness">Value 1</span>
+            </div>
+            <div class="variable">
+                <label for="rearSpringsStiffness">Rear Spring Stiffness:</label>
+                <span id="rearSpringsStiffness">Value 2</span>
+            </div>
+            <div class="variable">
                 <label for="frontDamperFastBump">Front Damper Fast Bump:</label>
                 <span id="frontDamperFastBump">Value 1</span>
             </div>
@@ -61,7 +69,7 @@
                 <a href="https://docs.google.com/spreadsheets/d/1738OHHb1ThNapS9rEqyZ-w8kKsow_1aSJNvvi8EwkAo/edit?usp=sharing" target="_blank">Aerodynamic properties</a>
             </div>
             <p>
-                Adopted for Web by Zi9
+                Adapted for Web by Zi9
             </p>
         </div>
     </div>
