--- a/zml/tools/suspensiontuner/index.html
+++ b/zml/tools/suspensiontuner/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="Info">
             <div class="button">
-                <a href="https://docs.google.com/spreadsheets/d/1738OHHb1ThNapS9rEqyZ-w8kKsow_1aSJNvvi8EwkAo/edit?usp=sharing" target="_blank">Aerodynamic properties</a>
+                <a href="https://docs.google.com/spreadsheets/d/1N-VqCq9DUSmP7iXrjZ3SoNscT4sin4x2SnNciHIkLS8" target="_blank">Aerodynamic properties</a>
             </div>
             <p>
                 Adapted for Web by Zi9
