--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         .indent3 { margin-left: 3rem; }
         .key { color: #d14949; }
         .valstr { color: #98df5e; }
+        .valnull { color: #245fce; }
         .brackets { color: #44d3bb; }
     </style>
 </head>
@@ -48,6 +49,7 @@
         <p class="brackets">{</p>
         <p class="indent1"><span class="key">"name"</span>: <span class="valstr">"Zi"</span>,</p>
         <p class="indent1"><span class="key">"brief"</span>: <span class="valstr">"Programmer, Sysadmin, Tech enthusiast"</span>,</p>
+        <p class="indent1"><span class="key">"geolocation"</span>: <span class="valstr">"EE 🇪🇪"</span>,</p>
         <p class="indent1"><span class="key">"contact"</span>: <span class="brackets">{</span></p>
         <p class="indent2"><span class="key">"discord"</span>: <span class="valstr">"zi9"</span></p>
         <p class="brackets indent1">},</p>
@@ -56,12 +58,29 @@
         <p class="indent2"><span class="key">"ko-fi"</span>: <a href="https://ko-fi.com/zi9xd"><span class="valstr">"https://ko-fi.com/zi9xd"</a></span>,</p>
         <p class="indent2"><span class="key">"youtube"</span>: <a href="https://youtube.com/@zi9xd"><span class="valstr">"https://youtube.com/@zi9xd"</a></span></p>
         <p class="brackets indent1">},</p>
+        <p class="indent1"><span class="key">"preferred_languages"</span>: <span class="brackets">[</span><span class="valstr">"C"</span>, <span class="valstr">"C#"</span>, <span class="valstr">"Python"</span><span class="brackets">]</span>,</p>
+        <p class="indent1"><span class="key">"interests"</span>: <span class="brackets">[</span><span class="valstr">"Reverse Engineering"</span>, <span class="valstr">"Linux (Arch BTW)"</span>, <span class="valstr">"Gamedev"</span><span class="brackets">]</span>,</p>
         <p class="indent1"><span class="key">"projects"</span>: <span class="brackets">{</span></p>
         <p class="indent2"><span class="key">"ZML"</span>: <span class="brackets">{</span></p>
         <p class="indent3"><span class="key">"brief"</span>: <span class="valstr">"A purpose built mod loader for CarX"</span>,</p>
+        <p class="indent3"><span class="key">"techstack"</span>: <span class="valstr">"C, C#(mono) + Python pipelining"</span>,</p>
         <p class="indent3"><span class="key">"page"</span>: <a href="https://zi9.github.io/zml"><span class="valstr">"https://zi9.github.io/zml"</a></span>,</p>
         <p class="indent3"><span class="key">"discord"</span>: <a href="https://discord.com/invite/DpR9xWzPyb"><span class="valstr">"https://discord.com/invite/DpR9xWzPyb"</a></span></p>
-        <p class="brackets indent2">}</p>
+        <p class="brackets indent2">},</p>
+        <p class="indent2"><span class="key">"Deformers"</span>: <span class="brackets">{</span></p>
+        <p class="indent3"><span class="key">"brief"</span>: <span class="valstr">"A recreation of the Terep2 demo by Nagymathe Denes"</span>,</p>
+        <p class="indent3"><span class="key">"techstack"</span>: <span class="valstr">"Pure C using Raylib"</span>,</p>
+        <p class="indent3"><span class="key">"repo"</span>: <a href="https://github.com/Zi9/Deformers"><span class="valstr">"https://github.com/Zi9/Deformers"</a></span></p>
+        <p class="brackets indent2">},</p>
+        <p class="indent2"><span class="key">"MTMR"</span>: <span class="brackets">{</span></p>
+        <p class="indent3"><span class="key">"brief"</span>: <span class="valstr">"Monster Truck Madness 2 Remake"</span>,</p>
+        <p class="indent3"><span class="key">"techstack"</span>: <span class="valstr">"Godot 4 (C#/.NET8)"</span></p>
+        <p class="brackets indent2">},</p>
+        <p class="indent2"><span class="key">"PODtato"</span>: <span class="brackets">{</span></p>
+        <p class="indent3"><span class="key">"brief"</span>: <span class="valstr">"Toolkit for working with MTM2 POD files"</span>,</p>
+        <p class="indent3"><span class="key">"techstack"</span>: <span class="valstr">"C#/.NET8"</span></p>
+        <p class="brackets indent2">},</p>
+        <p class="indent2"><span class="key">"Radium"</span>: <span class="valnull">null</span></p>
         <p class="brackets indent1">}</p>
         <p class="brackets">}</p>
     </div>
