--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="The Zi9 website!!!">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -37,9 +40,9 @@
         .indent1 { margin-left: 1rem; }
         .indent2 { margin-left: 2rem; }
         .indent3 { margin-left: 3rem; }
-        .key { color: #d14949; }
+        .key { color: #f17660; }
         .valstr { color: #98df5e; }
-        .valnull { color: #245fce; }
+        .valnull { color: #679cff; }
         .brackets { color: #44d3bb; }
     </style>
 </head>
